--- a/src/_templates/index/i-2.pug
+++ b/src/_templates/index/i-2.pug
@@ -6,7 +6,7 @@ section.index-2(data-scroll-id="1" full-screen)
 					.section(data-bg="./assets/images/background/index-2.1.png")
 						.block-content.mx-at.bg-1(max-width='845px' data-bg-multiply)
 							.content.ta-c
-								.block-title.mx-at(max-width="600px")
+								.block-title.mx-at
 									h2.wow.fadeInLeft(font-size="40px" data-wow-delay=".2s") GIÁ TRỊ DỰ ÁN
 								.sub-title.wow.fadeInLeft(data-wow-delay=".3s")
 									p West Lakes Golf & Villass
@@ -14,7 +14,7 @@ section.index-2(data-scroll-id="1" full-screen)
 										br
 										| ôm trọn sân Golf đầu tiên ở phía Tây Thành phố Hồ Chí Minh
 								.desc.wow.fadeInLeft(data-wow-delay=".4s")
-									p Phát triển dựa trên những quy chuẩn kiến trúc khắt khe của sân Golf West Lakes - một sản phẩm của đơn vị thiết kế Thomson Perrett hàng đầu thế giới, chỉ cách trung tâm Tp.HCM chỉ hơn 30km nhưng quy tụ các tiện ích nội khu 5 sao đáp ứng nhu cầu nghỉ dưỡng xanh cao cấp của gia đình hiện đại.
+									p Phát triển dựa trên những quy chuẩn kiến trúc khắt khe của sân Golf West Lakes - một ssản phẩm của đơn vị thiết kế Thomson Perrett hàng đầu thế giới, chỉ cách trung tâm Tp.HCM chỉ hơn 30km nhưng quy tụ các tiện ích nội khu 5 sao đáp ứng nhu cầu nghỉ dưỡng xanh cao cấp của gia đình hiện đại.
 				.swiper-slide
 					.section(data-bg="./assets/images/background/index-2.2.png")
 						.block-content.ml-at.bg-2(max-width='50%' border-right data-bg-multiply)
