--- a/src/_templates/index/i-3.pug
+++ b/src/_templates/index/i-3.pug
@@ -2,10 +2,10 @@ section.index-3(data-scroll-id="2" data-bg="./assets/images/background/index-3.p
 	.block-1
 		.container.h-100
 			.block-content(max-width='40%')
-				.content
-					.block-title(after-bg-main)
-						h2.wow.fadeInDown(data-wow-delay=".2s") VỊ TRÍ & TIỆN ÍCH
-					.desc.wow.fadeInDown(data-wow-delay=".3s")
+				.content.a
+					.block-title.wow.fadeInDown(data-wow-delay=".2s" after-bg-main)
+						h2 VỊ TRÍ & TIỆN ÍCH
+					.desc.wow.fadeInDown(data-wow-delay=".4s")
 						h3 Vị trí tiềm năng – Động lực sinh lời vượt trội
 						p Tọa lạc ngay mặt tiền Tỉnh lộ 822 thuộc huyện Đức Hòa, tỉnh Long An, West Lakes Golf & Villas là Đô thị sân Golf đầu tiên sở hữu vị trí hội tụ đầy đủ mọi yếu tố “nội lực” cần thiết giúp thúc đẩy sự sinh lời nhanh chóng.
 		.img-map
@@ -37,16 +37,19 @@ section.index-3(data-scroll-id="2" data-bg="./assets/images/background/index-3.p
 							img.lazyload.blur-up(data-src="./assets/icons/icon-index-2__1.png", alt="ICON-1")
 						.text
 							p Cách bệnh viện
-							p Đa Khoa Xuyên Á 7km
+								br
+								| đa Khoa Xuyên Á 7km
 					.item.wow.fadeInLeft(data-wow-delay=".3s")
 						.icon
 							img.lazyload.blur-up(data-src="./assets/icons/icon-index-2__2.png", alt="ICON-2")
 						.text
-							p Cách bệnh viện
-							p Đa Khoa Xuyên Á 7km
+							p Nằm cạnh bên các
+								br
+								| khu công nghiệp lớn
 					.item.wow.fadeInLeft(data-wow-delay=".4s")
 						.icon
 							img.lazyload.blur-up(data-src="./assets/icons/icon-index-2__3.png", alt="ICON-3")
 						.text
-							p Cách bệnh viện
-							p Đa Khoa Xuyên Á 7km
+							p Cách 2 trung tâm
+								br
+								| hành chính lớn 3km
