--- a/src/scss/_globals/utilities.scss
+++ b/src/scss/_globals/utilities.scss
@@ -247,14 +247,14 @@ main {
 .block-title {
 	position: relative;
 	border-bottom: 1px solid #ffffff;
-	width: 100%;
-	padding-bottom: 15px;
+	width: fit-content;
+	padding: 0 30px 15px;
 
 	h2 {
 		display: inline-block;
 		position: relative;
 		color: #ffffff;
-		font-size: 60px;
+		font-size: 42px;
 		padding-right: 25px;
 		text-transform: uppercase;
 		line-height: 1.2;
