--- a/src/_templates/index/i-5.pug
+++ b/src/_templates/index/i-5.pug
@@ -1,8 +1,8 @@
 section.index-5(data-scroll-id="3" data-bg="./assets/images/background/index-5.png")
 	.block-content.ta-c.mx-at(max-width='50%')
 		.content
-			.block-title
-				h2.wow.fadeInDown(data-wow-delay=".2s") MẶT BẰNG
+			.block-title.mx-at.wow.fadeInDown(data-wow-delay=".2s")
+				h2 MẶT BẰNG
 			.desc.wow.fadeInDown(data-wow-delay=".3s")
 				p Biệt thự sân golf West Lakes Golf & Villas bao gồm 3 loại sản phẩm: Biệt thự mini, biệt thự đơn lập và biệt thự song lập. Các công trình đều được thiết kế và xây dựng theo phong cách đậm chất tân cổ điển, hiện đại trong kiến trúc và sang trọng về nội thất.
 	.map-index-5
