--- a/src/_templates/_layout/_fixed-menu.pug
+++ b/src/_templates/_layout/_fixed-menu.pug
@@ -22,4 +22,4 @@
 			.icon
 				img.svg(data-src="./assets/icons/download.svg", alt="PHONE")
 			.text-hover
-				h5 tải brochure
+				h5 tải chính sách thanh toán
