--- a/src/_templates/index/i-10.pug
+++ b/src/_templates/index/i-10.pug
@@ -5,7 +5,7 @@ section.index-10(data-scroll-id="7")
 				.col-lg-6
 					.block-content.mx-at
 						.content.ta-c
-							.block-title.mx-at(max-width='75%')
+							.block-title.mx-at.wow.fadeInLeft(data-wow-delay=".2s")
 								h2 CHỦ ĐẦU TƯ
 							.desc
 								p Với kinh nghiệm quý báu suốt 12 năm hình thành và phát triển, theo đó là sự thấu hiểu sâu sắc thị hiếu khách hàng, Trần Anh Group tự hào đem đến những sản phẩm xứng tầm uy tín của một trong những chủ đầu tư bất động sản hàng đầu tại tỉnh Long An.
@@ -13,10 +13,10 @@ section.index-10(data-scroll-id="7")
 				.col-lg-6
 					.review-video
 						.block-video
-							.youtube-api(data-url="https://www.youtube.com/watch?v=oaQQvVFaEu0")
+							.youtube-api(data-thumbnail="./assets/images/items/index-9__1.png" data-url="https://www.youtube.com/watch?v=oaQQvVFaEu0")
 						.content(data-bg="./assets/images/background/text-review-video.png")
-							h3 Dự án West Lakes Golf & Villas Nhà mẫu 84m2 Sân golf Tân Mỹ
-							p Dự án West Lakes Golf & Villas là một trong những dự án của tập đoàn trần anh đầu tư tại san golf tân mỹ, Với hơn 600 căn Villas được đầu tư bài bản, bao gồm Nhà liền kề, - Biệt thự song lập - Biệt thự đơn lập, Diện tích sử dụng từ 200 - 1000m2, Giá từ 3,2 tỷ ( Giá hoàn thiện full và đầy đủ tiện ích, Đã bao gồm VAT)
+							//- h3 Dự án West Lakes Golf & Villas Nhà mẫu 84m2 Sân golf Tân Mỹ
+							//- p Dự án West Lakes Golf & Villas là một trong những dự án của tập đoàn trần anh đầu tư tại san golf tân mỹ, Với hơn 600 căn Villas được đầu tư bài bản, bao gồm Nhà liền kề, - Biệt thự song lập - Biệt thự đơn lập, Diện tích sử dụng từ 200 - 1000m2, Giá từ 3,2 tỷ ( Giá hoàn thiện full và đầy đủ tiện ích, Đã bao gồm VAT)
 							.date(data-bg="./assets/images/background/item-date-index-9.png") 28/05/20
 		.block-2
 			.slider-thumnail-video
@@ -27,7 +27,7 @@ section.index-10(data-scroll-id="7")
 								.img.ov-h
 									img.ofcv(src="./assets/images/items/index-9__1.png", alt="")
 								.text(data-bg="./assets/images/background/item_index-9.png")
-									h3.lcl.lcl-1 Dự án West Lakes Golf & Villas Nhà mẫu 84m2 Sân golf Tân Mỹ
+									//- h3.lcl.lcl-1 Dự án West Lakes Golf & Villas Nhà mẫu 84m2 Sân golf Tân Mỹ
 									p.d-n Dự án West Lakes Golf & Villas là một trong những dự án của tập đoàn trần anh đầu tư tại san golf tân mỹ, Với hơn 600 căn Villas được đầu tư bài bản, bao gồm Nhà liền kề, - Biệt thự song lập - Biệt thự đơn lập, Diện tích sử dụng từ 200 - 1000m2, Giá từ 3,2 tỷ ( Giá hoàn thiện full và đầy đủ tiện ích, Đã bao gồm VAT)
 									.date(data-bg="./assets/images/background/item-date-index-9.png") 28/05/20
 						.swiper-slide
@@ -35,7 +35,7 @@ section.index-10(data-scroll-id="7")
 								.img.ov-h
 									img.ofcv(src="./assets/images/items/index-9__2.png", alt="")
 								.text(data-bg="./assets/images/background/item_index-9.png")
-									h3.lcl.lcl-1 Khu đô thị Phúc an city Giai đoạn 2 khu biệt thự phúc an tiến độ tháng 6/2020
+									//- h3.lcl.lcl-1 Khu đô thị Phúc an city Giai đoạn 2 khu biệt thự phúc an tiến độ tháng 6/2020
 									p.d-n Giai đoạn 2 khu biệt thự phúc an với hơn 500 căn biệt thự mini, hiện đang trong quá trình bàn giao nhà, Các phân khu tiện ích cũng đang trong quá trình hoàn thiện những công đoan cuối cùng.
 									.date(data-bg="./assets/images/background/item-date-index-9.png") 28/05/20
 						.swiper-slide
@@ -43,7 +43,7 @@ section.index-10(data-scroll-id="7")
 								.img.ov-h
 									img.ofcv(src="./assets/images/items/index-9__3.png", alt="")
 								.text(data-bg="./assets/images/background/item_index-9.png")
-									h3.lcl.lcl-1 Dự án Bella villa đức hoà Tiến độ tháng 6/2020 giai đoạn 2
+									//- h3.lcl.lcl-1 Dự án Bella villa đức hoà Tiến độ tháng 6/2020 giai đoạn 2
 									p.d-n Video tiến độ dự án Bella villa đức hoà, Toạ lạc ngay mặt tiền tỉnh lộ 824, Quy mô 9,2 ha với hơn 400 căn biệt thự song lập và nhà phố liền kề.
 									.date(data-bg="./assets/images/background/item-date-index-9.png") 28/05/20
 						.swiper-slide
@@ -51,7 +51,7 @@ section.index-10(data-scroll-id="7")
 								.img.ov-h
 									img.ofcv(src="./assets/images/items/index-9__1.png", alt="")
 								.text(data-bg="./assets/images/background/item_index-9.png")
-									h3.lcl.lcl-1 khu biệt thự dự án phúc an city giai đoạn 2 tháng 5 năm 2020
+									//- h3.lcl.lcl-1 khu biệt thự dự án phúc an city giai đoạn 2 tháng 5 năm 2020
 									p.d-n Video chi tiết khu biệt thự dự án phúc an city giai đoạn 2, tháng 5 năm 2020, hiện tại các hạng mục trong dự án đã hoàn thiện 80 - 90%. các block nhà đã xong, quý khách hàng có thể nhận nhà và hoàn thiện để vào ở
 									.date(data-bg="./assets/images/background/item-date-index-9.png") 28/05/20
 						.swiper-slide
@@ -59,7 +59,7 @@ section.index-10(data-scroll-id="7")
 								.img.ov-h
 									img.ofcv(src="./assets/images/items/index-9__2.png", alt="")
 								.text(data-bg="./assets/images/background/item_index-9.png")
-									h3.lcl.lcl-1 Dự án Solar City bến lức Tiến độ tháng 6 năm 2020 CĐT Trần anh group
+									//- h3.lcl.lcl-1 Dự án Solar City bến lức Tiến độ tháng 6 năm 2020 CĐT Trần anh group
 									p.d-n Dự án Solar city quy mô 4,8ha với 225 căn nhà phố liền kề, thiết kế 1 trệt 2 lầu, view hơn 300m bờ sông vàm cỏ đông, toạ lạc ngay mặt tiền đường Nguyễn văn tuôi - Nguyễn trung trực thuộc trung tâm thị trấn bến lức
 									.date(data-bg="./assets/images/background/item-date-index-9.png") 28/05/20
 						.swiper-slide
@@ -67,7 +67,7 @@ section.index-10(data-scroll-id="7")
 								.img.ov-h
 									img.ofcv(src="./assets/images/items/index-9__3.png", alt="")
 								.text(data-bg="./assets/images/background/item_index-9.png")
-									h3.lcl.lcl-1 Dự án WEST LAKES Golf & Villas Mới nhất ( Biệt thự sân golf )
+									//- h3.lcl.lcl-1 Dự án WEST LAKES Golf & Villas Mới nhất ( Biệt thự sân golf )
 									p.d-n Video chi tiết dự án Biệt thự Sân Golf WEST LAKES GOLF& VILLAS, Phát triển dự án tập đoàn Trần anh group. Quy mô 13ha với hơn 500 căn BT song lập - đơn lập - và biệt thự mini. 
 									.date(data-bg="./assets/images/background/item-date-index-9.png") 28/05/20
 				.list-btn-slider
