--- a/src/_templates/index/i-6.pug
+++ b/src/_templates/index/i-6.pug
@@ -3,18 +3,17 @@ section.index-6(data-scroll-id="4" data-bg="./assets/images/background/index-6.p
 		.container
 			.block-content.ta-c.mx-at(max-width='60%')
 				.content
-					.block-title
+					.block-title.mx-at
 						h2 CHƯƠNG TRÌNH BÁN HÀNG
-	.block-2(full-screen data-bg="./assets/images/background/index-6-block-2.png")
+	.block-2(data-bg="./assets/images/background/index-6-block-2.png")
 		.container.h-100
-			.block-content.h-100.mx-at(max-width='1088px' data-bg="./assets/images/background/item-index-6.png")
+			.block-content.h-100.mx-at(max-width='1088px' data-bg-multiply)
 				.content.ta-c
 					.price
 						h4 giá công khai chỉ từ
 						h3 2.850.000.000 VNĐ
 						p Chỉ cần thanh toán 15% bạn đã sở hữu ngay căn biệt thự view sân Golf đẳng cấp liền kề Tp Hồ Chí Minh.
 					.prioritize.mx-at(max-width='80%')
-						h3 Tối ưu chính sách thanh toán và chiết khấu cao:
 						ul
 							li.wow.fadeInDown(data-wow-delay=".2s")
 								.icon.ov-h
@@ -27,7 +26,6 @@ section.index-6(data-scroll-id="4" data-bg="./assets/images/background/index-6.p
 								.text
 									p Chính sách thanh toán sớm
 					.sale
-						h3 Khuyến mãi có một không hai:
 						ul
 							li.wow.fadeInUp(data-wow-delay=".2s")
 								.icon.ov-h
