--- a/src/_templates/index/i-9.pug
+++ b/src/_templates/index/i-9.pug
@@ -15,7 +15,7 @@ section.index-9(data-scroll-id="6")
 								.img.ov-h
 									img.ofcv(src="./assets/images/items/index-9__1.png", alt="")
 									.date(data-bg="./assets/images/background/item-date-index-9.png") 28/05/20
-								.text(data-bg="./assets/images/background/item_index-9.png")
+								.text(data-bg-multiply)
 									h3.lcl.lcl-1 Lorem ipsum dolor
 									p.lcl.lcl-2 Lorem ipsum dolor sit amet, consectetuer adipiscing eli.
 						.swiper-slide
@@ -23,7 +23,7 @@ section.index-9(data-scroll-id="6")
 								.img.ov-h
 									img.ofcv(src="./assets/images/items/index-9__2.png", alt="")
 									.date(data-bg="./assets/images/background/item-date-index-9.png") 28/05/20
-								.text(data-bg="./assets/images/background/item_index-9.png")
+								.text(data-bg-multiply)
 									h3.lcl.lcl-1 Lorem ipsum dolor
 									p.lcl.lcl-2 Lorem ipsum dolor sit amet, consectetuer adipiscing eli.
 						.swiper-slide
@@ -31,7 +31,7 @@ section.index-9(data-scroll-id="6")
 								.img.ov-h
 									img.ofcv(src="./assets/images/items/index-9__3.png", alt="")
 									.date(data-bg="./assets/images/background/item-date-index-9.png") 28/05/20
-								.text(data-bg="./assets/images/background/item_index-9.png")
+								.text(data-bg-multiply)
 									h3.lcl.lcl-1 Lorem ipsum dolor
 									p.lcl.lcl-2 Lorem ipsum dolor sit amet, consectetuer adipiscing eli.
 						.swiper-slide
@@ -39,7 +39,7 @@ section.index-9(data-scroll-id="6")
 								.img.ov-h
 									img.ofcv(src="./assets/images/items/index-9__1.png", alt="")
 									.date(data-bg="./assets/images/background/item-date-index-9.png") 28/05/20
-								.text(data-bg="./assets/images/background/item_index-9.png")
+								.text(data-bg-multiply)
 									h3.lcl.lcl-1 Lorem ipsum dolor
 									p.lcl.lcl-2 Lorem ipsum dolor sit amet, consectetuer adipiscing eli.
 						.swiper-slide
@@ -47,7 +47,7 @@ section.index-9(data-scroll-id="6")
 								.img.ov-h
 									img.ofcv(src="./assets/images/items/index-9__2.png", alt="")
 									.date(data-bg="./assets/images/background/item-date-index-9.png") 28/05/20
-								.text(data-bg="./assets/images/background/item_index-9.png")
+								.text(data-bg-multiply)
 									h3.lcl.lcl-1 Lorem ipsum dolor
 									p.lcl.lcl-2 Lorem ipsum dolor sit amet, consectetuer adipiscing eli.
 						.swiper-slide
@@ -55,7 +55,7 @@ section.index-9(data-scroll-id="6")
 								.img.ov-h
 									img.ofcv(src="./assets/images/items/index-9__3.png", alt="")
 									.date(data-bg="./assets/images/background/item-date-index-9.png") 28/05/20
-								.text(data-bg="./assets/images/background/item_index-9.png")
+								.text(data-bg-multiply)
 									h3.lcl.lcl-1 Lorem ipsum dolor
 									p.lcl.lcl-2 Lorem ipsum dolor sit amet, consectetuer adipiscing eli.
 				.list-btn-slider
