--- a/src/scss/pages/index/i-8.scss
+++ b/src/scss/pages/index/i-8.scss
@@ -1,4 +1,5 @@
 .index-8 {
+	position: relative;
 	height: 780px;
 	background-size: cover;
 
@@ -7,7 +8,7 @@
 	}
 
 	.sub-title {
-		margin-top: 64px;
+		margin-top: 25px;
 
 		p {
 			color: #ffffff;
@@ -20,7 +21,7 @@
 		flex-wrap: wrap;
 		margin-right: -7.5px;
 		margin-left: -7.5px;
-		margin-top: 25px;
+		margin-top: 50px;
 
 		.item {
 			-ms-flex: 0 0 20%;
@@ -30,10 +31,28 @@
 			padding-left: 7.5px;
 			height: 417px;
 
+			&:after {
+				z-index: 5;
+			}
+
+			&:nth-child(2n+1) {
+				.item-content {
+					&:after {
+						background-image: url('../assets/images/background/item-index-8__1.png');
+					}
+				}
+			}
+
+			&:nth-child(2n) {
+				.item-content {
+					&:after {
+						background-image: url('../assets/images/background/item-index-8__2.png');
+					}
+				}
+			}
+
 			.item-content {
-				position: relative;
 				height: 100%;
-				background-size: 100% 100%;
 			}
 		}
 
@@ -52,6 +71,7 @@
 				padding-bottom: 10px;
 				border-bottom: 1px solid #ffffff5d;
 				text-align: center;
+				z-index: 10;
 			}
 
 			.text {
@@ -60,6 +80,7 @@
 				top: 50%;
 				width: 80%;
 				transform: translateX(-50%);
+				z-index: 10;
 
 				p {
 					font-size: 20px;
@@ -72,9 +93,16 @@
 	@media (max-width: 1024.98px) {
 		.list-item {
 			.icon {
+				position: relative;
+				z-index: 50;
 				margin: 0 auto;
 				height: 45px;
 				width: 45px;
+			}
+
+			.text {
+				position: relative;
+				z-index: 50;
 			}
 		}
 	}
