--- a/src/scss/pages/index/i-6.scss
+++ b/src/scss/pages/index/i-6.scss
@@ -7,19 +7,30 @@
 
 	.block-1 {
 		.block-content {
-			padding: 85px 0;
+			padding: 50px 0;
 		}
 	}
 
 	.block-2 {
 		box-shadow: 0 5px 10px rgba($color: #000000, $alpha: 0.5);
 		background-size: cover;
+		height: 70vh;
+
 
 		.block-content {
 			position: relative;
 
+			.content {
+				position: relative;
+				z-index: 10;
+			}
+
+			&:after {
+				background-image: url(../assets/images/background/item-index-6.png);
+			}
+
 			@media (min-width: 1025px) {
-				&:after{
+				&:after {
 					content: '';
 					position: absolute;
 					top: 0;
@@ -29,6 +40,7 @@
 					mix-blend-mode: multiply;
 					background-image: url("../assets/images/background/item-index-6.png");
 				}
+
 				.content {
 					position: absolute;
 					top: 50%;
@@ -61,12 +73,6 @@
 
 		.prioritize {
 			margin-top: 25px;
-
-			h3 {
-				font-size: 25px;
-				color: #ffffff;
-				text-transform: uppercase;
-			}
 
 			ul {
 				margin-top: 40px;
@@ -102,12 +108,6 @@
 
 		.sale {
 			margin-top: 25px;
-
-			h3 {
-				font-size: 25px;
-				color: #ffffff;
-				text-transform: uppercase;
-			}
 
 			ul {
 				margin-top: 40px;
@@ -182,10 +182,6 @@
 			}
 
 			.prioritize {
-				h3 {
-					font-size: 22px;
-				}
-
 				ul {
 					li {
 						.icon {
@@ -209,10 +205,6 @@
 
 			.sale {
 				margin-top: 25px;
-
-				h3 {
-					font-size: 22px;
-				}
 
 				ul {
 					margin-top: 20px;
@@ -279,12 +271,6 @@
 			.sale {
 				margin-top: 25px;
 
-				h3 {
-					font-size: 18px;
-					color: #ffffff;
-					text-transform: uppercase;
-				}
-
 				ul {
 					margin-top: 25px;
 
@@ -310,10 +296,6 @@
 			.prioritize {
 				margin-top: 25px;
 				max-width: 100%;
-
-				h3 {
-					font-size: 18px;
-				}
 
 				ul {
 					margin-top: 25px;
