--- a/src/scss/pages/index/i-9.scss
+++ b/src/scss/pages/index/i-9.scss
@@ -8,12 +8,13 @@
 	@media (max-width: 767.98px) {
 		padding-top: 25px;
 	}
+
 	.sub-title {
-		margin-top: 60px;
+		margin-top: 30px;
 
 		p {
 			color: #ffffff;
-			font-size: 20px;
+			font-size: 18px;
 		}
 	}
 
@@ -47,15 +48,19 @@
 		.text {
 			color: #ffffff;
 			padding: 15px 30px;
-			background-size: 100% 100%;
+
+			&:after {
+				background-image: url(../assets/images/background/item_index-9.png);
+				z-index: -1;
+			}
 
 			h3 {
 				text-transform: uppercase;
-				font-size: 25px;
+				font-size: 18px;
 			}
 
 			p {
-				font-size: 20px;
+				font-size: 16px;
 			}
 		}
 	}
@@ -128,6 +133,7 @@
 
 		.slider-item__index-9 {
 			padding-bottom: 50px;
+
 			.text {
 				p {
 					font-size: 14px;
