--- a/src/_templates/index/i-4.pug
+++ b/src/_templates/index/i-4.pug
@@ -21,105 +21,105 @@ section.index-4
 			.map-index-4-slider-2.map-index-4-slider#map-index-4-slider-2
 				.content
 					.number 02
-					.title Sân golf chuẩn quốc tế 27 lỗ
+					.title  Nhà câu lạc bộ hiện đại
 					.text Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled scrambled it to make a type specimen book.
 				.swiper-container
 					.swiper-wrapper
 						.swiper-slide
-							img(src="./assets/images/background/index-4-1.jpg", alt="")
+							img(src="./assets/images/index-4/1.jpg", alt="")
 						.swiper-slide
-							img(src="./assets/images/background/index-4-1.jpg", alt="")
+							img(src="./assets/images/index-4/1.jpg", alt="")
 						.swiper-slide
-							img(src="./assets/images/background/index-4-1.jpg", alt="")
+							img(src="./assets/images/index-4/1.jpg", alt="")
 						.swiper-slide
-							img(src="./assets/images/background/index-4-1.jpg", alt="")
+							img(src="./assets/images/index-4/1.jpg", alt="")
 						.swiper-slide
-							img(src="./assets/images/background/index-4-1.jpg", alt="")
+							img(src="./assets/images/index-4/1.jpg", alt="")
 			.map-index-4-slider-3.map-index-4-slider#map-index-4-slider-3
 				.content
 					.number 03
-					.title Sân golf chuẩn quốc tế 27 lỗ
+					.title  Tổ Hợp Giải Trí & Công Viên Nước
 					.text Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled scrambled it to make a type specimen book.
 				.swiper-container
 					.swiper-wrapper
 						.swiper-slide
-							img(src="./assets/images/background/index-4-1.jpg", alt="")
+							img(src="./assets/images/index-4/2.jpg", alt="")
 						.swiper-slide
-							img(src="./assets/images/background/index-4-1.jpg", alt="")
+							img(src="./assets/images/index-4/2.jpg", alt="")
 						.swiper-slide
-							img(src="./assets/imag	es/background/index-4-1.jpg", alt="")
+							img(src="./assets/images/index-4/2.jpg", alt="")
 						.swiper-slide
-							img(src="./assets/images/background/index-4-1.jpg", alt="")
+							img(src="./assets/images/index-4/2.jpg", alt="")
 						.swiper-slide
-							img(src="./assets/images/background/index-4-1.jpg", alt="")
+							img(src="./assets/images/index-4/2.jpg", alt="")
 			.map-index-4-slider-4.map-index-4-slider#map-index-4-slider-4
 				.content
 					.number 04
-					.title Sân golf chuẩn quốc tế 27 lỗ
+					.title Công viên chủ đề
 					.text Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled scrambled it to make a type specimen book.
 				.swiper-container
 					.swiper-wrapper
 						.swiper-slide
-							img(src="./assets/images/background/index-4-1.jpg", alt="")
+							img(src="./assets/images/index-4/3.jpg", alt="")
 						.swiper-slide
-							img(src="./assets/images/background/index-4-1.jpg", alt="")
+							img(src="./assets/images/index-4/3.jpg", alt="")
 						.swiper-slide
-							img(src="./assets/images/background/index-4-1.jpg", alt="")
+							img(src="./assets/images/index-4/3.jpg", alt="")
 						.swiper-slide
-							img(src="./assets/images/background/index-4-1.jpg", alt="")
+							img(src="./assets/images/index-4/3.jpg", alt="")
 						.swiper-slide
-							img(src="./assets/images/background/index-4-1.jpg", alt="")
+							img(src="./assets/images/index-4/3.jpg", alt="")
 			.map-index-4-slider-5.map-index-4-slider#map-index-4-slider-5
 				.content
 					.number 05
-					.title Sân golf chuẩn quốc tế 27 lỗ
+					.title Trường Tiểu Học
 					.text Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled scrambled it to make a type specimen book.
 				.swiper-container
 					.swiper-wrapper
 						.swiper-slide
-							img(src="./assets/images/background/index-4-1.jpg", alt="")
+							img(src="./assets/images/index-4/1.jpg", alt="")
 						.swiper-slide
-							img(src="./assets/images/background/index-4-1.jpg", alt="")
+							img(src="./assets/images/index-4/1.jpg", alt="")
 						.swiper-slide
-							img(src="./assets/images/background/index-4-1.jpg", alt="")
+							img(src="./assets/images/index-4/1.jpg", alt="")
 						.swiper-slide
-							img(src="./assets/images/background/index-4-1.jpg", alt="")
+							img(src="./assets/images/index-4/1.jpg", alt="")
 						.swiper-slide
-							img(src="./assets/images/background/index-4-1.jpg", alt="")
+							img(src="./assets/images/index-4/1.jpg", alt="")
 			.map-index-4-slider-6.map-index-4-slider#map-index-4-slider-6
 				.content
 					.number 06
-					.title Sân golf chuẩn quốc tế 27 lỗ
+					.title Trường trung học
 					.text Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled scrambled it to make a type specimen book.
 				.swiper-container
 					.swiper-wrapper
 						.swiper-slide
-							img(src="./assets/images/background/index-4-1.jpg", alt="")
+							img(src="./assets/images/index-4/1.jpg", alt="")
 						.swiper-slide
-							img(src="./assets/images/background/index-4-1.jpg", alt="")
+							img(src="./assets/images/index-4/1.jpg", alt="")
 						.swiper-slide
-							img(src="./assets/images/background/index-4-1.jpg", alt="")
+							img(src="./assets/images/index-4/1.jpg", alt="")
 						.swiper-slide
-							img(src="./assets/images/background/index-4-1.jpg", alt="")
+							img(src="./assets/images/index-4/1.jpg", alt="")
 						.swiper-slide
-							img(src="./assets/images/background/index-4-1.jpg", alt="")
+							img(src="./assets/images/index-4/1.jpg", alt="")
 			.map-index-4-slider-7.map-index-4-slider#map-index-4-slider-7
 				.content
 					.number 07
-					.title Sân golf chuẩn quốc tế 27 lỗ
+					.title Bệnh viện quốc tế
 					.text Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled scrambled it to make a type specimen book.
 				.swiper-container
 					.swiper-wrapper
 						.swiper-slide
-							img(src="./assets/images/background/index-4-1.jpg", alt="")
+							img(src="./assets/images/index-4/4.jpg", alt="")
 						.swiper-slide
-							img(src="./assets/images/background/index-4-1.jpg", alt="")
+							img(src="./assets/images/index-4/4.jpg", alt="")
 						.swiper-slide
-							img(src="./assets/images/background/index-4-1.jpg", alt="")
+							img(src="./assets/images/index-4/4.jpg", alt="")
 						.swiper-slide
-							img(src="./assets/images/background/index-4-1.jpg", alt="")
+							img(src="./assets/images/index-4/4.jpg", alt="")
 						.swiper-slide
-							img(src="./assets/images/background/index-4-1.jpg", alt="")
+							img(src="./assets/images/index-4/4.jpg", alt="")
 		
 		.map-index-4-slider-controls
 			.map-index-4-slider-close
@@ -146,25 +146,25 @@ section.index-4
 			.map-dialog
 				.dialog.dialog-1(data-dialog="1")
 					.dialog-wrapper
-						h2 Sân golf chuẩn quốc tế 1
+						h2 Sân golf chuẩn quốc tế 27 lỗ
 				.dialog.dialog-2(data-dialog="2")
 					.dialog-wrapper
-						h2 Sân golf chuẩn quốc tế 2
+						h2 Nhà câu lạc bộ hiện đại
 				.dialog.dialog-3(data-dialog="3")
 					.dialog-wrapper
-						h2 Sân golf chuẩn quốc tế 3
+						h2 Tổ Hợp Giải Trí & Công Viên Nước
 				.dialog.dialog-4(data-dialog="4")
 					.dialog-wrapper
-						h2 Sân golf chuẩn quốc tế 4
+						h2  Công viên chủ đề
 				.dialog.dialog-5(data-dialog="5")
 					.dialog-wrapper
-						h2 Sân golf chuẩn quốc tế 5
+						h2 Trường Tiểu Học
 				.dialog.dialog-6(data-dialog="6")
 					.dialog-wrapper
-						h2 Sân golf chuẩn quốc tế 6
+						h2 Trường trung học
 				.dialog.dialog-7(data-dialog="7")
 					.dialog-wrapper
-						h2 Sân golf chuẩn quốc tế 7
+						h2 Bệnh viện quốc tế
 		.container.map-index-4-container
 			.block-content
 				.content
