update feed back

--- a/src/_templates/index/i-2.pug
+++ b/src/_templates/index/i-2.pug
@@ -10,9 +10,7 @@ section.index-2(data-scroll-id="1" full-screen)
 									h2.wow.fadeInLeft(font-size="40px" data-wow-delay=".2s") GIÁ TRỊ DỰ ÁN
 								.sub-title.wow.fadeInLeft(data-wow-delay=".3s")
 									p West Lakes Golf & Villass
-									p Quần thể biệt thự nghỉ dưỡng ven đô,
-										br
-										| ôm trọn sân Golf đầu tiên ở phía Tây Thành phố Hồ Chí Minh
+									p Quần thể biệt thự nghỉ dưỡng ven đô, ôm trọn sân Golf đầu tiên ở phía Tây Thành phố Hồ Chí Minh
 								.desc.wow.fadeInLeft(data-wow-delay=".4s")
 									p Phát triển dựa trên những quy chuẩn kiến trúc khắt khe của sân Golf West Lakes - một ssản phẩm của đơn vị thiết kế Thomson Perrett hàng đầu thế giới, chỉ cách trung tâm Tp.HCM chỉ hơn 30km nhưng quy tụ các tiện ích nội khu 5 sao đáp ứng nhu cầu nghỉ dưỡng xanh cao cấp của gia đình hiện đại.
 				.swiper-slide
