--- a/src/scss/_globals/utilities.scss
+++ b/src/scss/_globals/utilities.scss
@@ -258,6 +258,7 @@ main {
 		padding-right: 25px;
 		text-transform: uppercase;
 		line-height: 1.2;
+		white-space: nowrap;
 
 		&:after {
 			content: '';
