upload css feedback

--- a/src/_templates/index/i-8.pug
+++ b/src/_templates/index/i-8.pug
@@ -5,7 +5,7 @@ section.index-8(data-scroll-id="5" data-bg="./assets/images/background/index-8.p
 				.block-title.mx-at(max-width="600px")
 					h2 HỖ TRỢ TÀI CHÍNH
 				.sub-title
-					p.ta-c "Đồng hành cùng Trần Anh Group phát triển dự án West Lakes Golf & Villas, .... cung cấp gói hỗ trợ tài chính như sau:
+					p "Đồng hành cùng Trần Anh Group phát triển dự án West Lakes Golf & Villas, .... cung cấp gói hỗ trợ tài chính như sau:
 			.list-item
 				.item.wow.fadeInUp(data-wow-delay=".2s")
 					.item-content(data-bg-multiply)
