--- a/src/scss/pages/index/i-5.scss
+++ b/src/scss/pages/index/i-5.scss
@@ -12,6 +12,9 @@
 			p {
 				color: #ffffff;
 				font-size: 18px;
+				text-align: justify;
+				width: fit-content;
+				margin: 0 auto;
 			}
 		}
 	}
