--- a/src/scss/pages/index/i-10.scss
+++ b/src/scss/pages/index/i-10.scss
@@ -18,6 +18,7 @@
 
 			p {
 				font-size: 18px;
+				text-align: justify;
 			}
 
 			.date {
@@ -39,6 +40,7 @@
 
 			p {
 				color: #ffffff;
+				text-align: justify;
 			}
 
 			p+p {
