--- a/src/scss/pages/index/i-8.scss
+++ b/src/scss/pages/index/i-8.scss
@@ -12,7 +12,10 @@
 
 		p {
 			color: #ffffff;
-			font-size: 20px;
+			font-size: 18px;
+			text-align: justify;
+			width: fit-content;
+			margin: 0 auto;
 		}
 	}
 
