--- a/src/_templates/index/i-3.pug
+++ b/src/_templates/index/i-3.pug
@@ -2,7 +2,7 @@ section.index-3(data-scroll-id="2" data-bg="./assets/images/background/index-3.p
 	.block-1
 		.container.h-100
 			.block-content(max-width='40%')
-				.content.a
+				.content
 					.block-title.wow.fadeInDown(data-wow-delay=".2s" after-bg-main)
 						h2 VỊ TRÍ & TIỆN ÍCH
 					.desc.wow.fadeInDown(data-wow-delay=".4s")
