--- a/src/_templates/index/i-10.pug
+++ b/src/_templates/index/i-10.pug
@@ -23,7 +23,7 @@ section.index-10(data-scroll-id="7")
 				.swiper-container
 					.swiper-wrapper
 						.swiper-slide
-							.item.active(data-url="https://www.youtube.com/watch?v=WhY1WJtWq1g")
+							.item(data-url="https://www.youtube.com/watch?v=WhY1WJtWq1g")
 								.img.ov-h
 									img.ofcv(src="./assets/images/items/index-9__1.png", alt="")
 								.text(data-bg="./assets/images/background/item_index-9.png")
