--- a/src/_templates/index/i-10.pug
+++ b/src/_templates/index/i-10.pug
@@ -13,7 +13,7 @@ section.index-10(data-scroll-id="7")
 				.col-lg-6
 					.review-video
 						.block-video
-							.youtube-api(data-thumbnail="./assets/images/items/index-9__1.png" data-url="https://www.youtube.com/watch?v=WhY1WJtWq1g")
+							.youtube-api(data-thumbnail="./assets/images/items/index-9__1.png" data-url)
 						.content(data-bg="./assets/images/background/text-review-video.png")
 							//- h3 Dự án West Lakes Golf & Villas Nhà mẫu 84m2 Sân golf Tân Mỹ
 							//- p Dự án West Lakes Golf & Villas là một trong những dự án của tập đoàn trần anh đầu tư tại san golf tân mỹ, Với hơn 600 căn Villas được đầu tư bài bản, bao gồm Nhà liền kề, - Biệt thự song lập - Biệt thự đơn lập, Diện tích sử dụng từ 200 - 1000m2, Giá từ 3,2 tỷ ( Giá hoàn thiện full và đầy đủ tiện ích, Đã bao gồm VAT)
