--- a/src/scss/pages/index/i-10.scss
+++ b/src/scss/pages/index/i-10.scss
@@ -43,7 +43,7 @@
 				text-align: justify;
 			}
 
-			p+p {
+			p + p {
 				margin-top: 15px;
 			}
 		}
@@ -58,23 +58,6 @@
 			.item {
 				position: relative;
 				cursor: pointer;
-
-				&.active {
-					.img {
-						&:after {
-							content: 'ĐANG XEM';
-							background-image: none;
-							width: unset;
-							height: unset;
-							font-size: 25px;
-							color: #ffffff;
-						}
-
-						&:before {
-							content: '';
-						}
-					}
-				}
 
 				.img {
 					position: relative;
@@ -123,6 +106,24 @@
 					background-size: 100% 100%;
 					width: unset;
 					height: unset;
+				}
+			}
+			&.active {
+				.item {
+					.img {
+						&:after {
+							content: 'ĐANG XEM';
+							background-image: none;
+							width: unset;
+							height: unset;
+							font-size: 25px;
+							color: #ffffff;
+						}
+
+						&:before {
+							content: '';
+						}
+					}
 				}
 			}
 		}
@@ -206,15 +207,6 @@
 
 			.swiper-slide {
 				.item {
-
-					&.active {
-						.img {
-							&:after {
-								font-size: 16px;
-							}
-						}
-					}
-
 					.img {
 						&:after {
 							width: 40px;
@@ -232,6 +224,15 @@
 
 					.date {
 						font-size: 12px;
+					}
+				}
+				&.active {
+					.item {
+						.img {
+							&:after {
+								font-size: 16px;
+							}
+						}
 					}
 				}
 			}
