--- a/src/_templates/index/i-2.pug
+++ b/src/_templates/index/i-2.pug
@@ -16,32 +16,32 @@ section.index-2(data-scroll-id="1" full-screen)
 				.swiper-slide
 					.section(data-bg="./assets/images/background/index-2.2.png")
 						.block-content.ml-at.bg-2(max-width='50%' border-right data-bg-multiply)
-							.content.ta-c(left="40%" width="60%")
-								.block-title
+							.content.ta-c
+								.block-title.mx-at
 									h2(font-size="40px" no-after) Cộng đồng tinh hoa 
 										br
 										| xứng tầm vị thế
-								.desc
+								.desc.mx-at(max-width='80%')
 									p Không nằm giữa trung tâm đô thị phồn hoa dự án được quy hoạch và thiết kế dành riêng cho cộng đồng dân cư thông thái yêu thích nơi sống cách biệt chốn thị thành náo nhiệt và những tiêu chuẩn sống giành riêng cho giới trí thức West Lakes Gofl & Villas được kiến tạo để đáp ứng mọi nhu cầu khắt khe của một nơi an cư xứng đáng với vị thế vượt tầm của chủ nhân thành đạt. Mỗi biệt thự thiết kế tinh tế đến từng chi tiết chính là tuyên ngôn mạnh về phong cách sống ở tầm cao khác biệt tương ứng, xứng đáng với giá trị đầu tư.
 				.swiper-slide
 					.section(data-bg="./assets/images/background/index-2.3.png")
 						.block-content.ml-at.bg-3(max-width='50%' border-right data-bg-multiply)
-							.content.ta-c(left="40%" width="60%")
-								.block-title
+							.content.ta-c
+								.block-title.mx-at
 									h2(font-size="40px" no-after) Kiến trúc độc bản
 										br
 										| cảnh quan hoàn mỹ
-								.desc
+								.desc.mx-at(max-width='80%')
 									p Kiến trúc độc bản - cảnh quan hoàn mỹ: Phía sau vẻ hào nhoáng của dãy biệt thự đẳng cấp là hàng trăm hecta thảm cỏ sân Golf xanh mướt chiếm trọn mọi tầm nhìn. Sự kế hợp hoàn hảo giữa vẻ đẹp kiến trúc và cảnh quan hoàn mỹ của West Lakes Golf & Villas sẽ là tuyệt phẩm dành riêng cho những chủ sở hữu xứng tầm.
 				.swiper-slide
 					.section(data-bg="./assets/images/background/index-2.4.png")
 						.block-content.bg-4(max-width='50%' border-left data-bg-multiply)
-							.content.ta-c(left="40%" width="60%")
-								.block-title
+							.content.ta-c
+								.block-title.mx-at
 									h2(font-size="40px" no-after) Tiềm năng đầu tư
 										br
 										| sinh lời vượt trội
-								.desc
+								.desc.mx-at(max-width='80%')
 									p Nằm cạnh quần thể Golf đẳng cấp nhất miền Nam và hưởng lợi từ tiềm năng phát triển của khu vực liền kề phía Tây Sài Gòn West Lakes Golf & Villas đảm bảo đem lại dòng tiền ổn định từ tiềm năng khai thác cho thuê, nhà đầu tư có thể hoàn toàn yên tâm về khả năng thu hồi vốn nhanh chóng đặc biệt khi dự án đang nằm giữa vùng tâm điểm thu hút nhiều đầu tư bất động sản liền kề phía Tây Sài Gòn.
 		.list-btn-slider(has-pause)
 			.item.swiper-button-prev
