--- a/src/scss/pages/index/i-4.scss
+++ b/src/scss/pages/index/i-4.scss
@@ -27,7 +27,7 @@
 			h2 {
 				color: map-get($mau, main-1);
 				margin-bottom: 10px;
-				font-size: 1.5rem;
+				font-size: 24px;
 
 				@media (min-width: 768px) {
 					margin-bottom: 15px;
@@ -38,22 +38,24 @@
 				}
 
 				@media (min-width: 1200px) {
-					font-size: 2rem;
+					font-size: 32px;
 					margin-bottom: 30px;
 				}
 
 				@media (min-width: 1440px) {
-					font-size: 2.5rem;
+					font-size: 37px;
 				}
 			}
 
 			.desc {
 				ul {
-					padding-left: 20px;
+					padding-left: 0;
+					list-style-type: none;
 
 					li {
 						color: #ffffff;
 						font-size: 0.85rem;
+						text-align: justify;
 
 						@media (min-width: 1200px) {
 							font-size: 1.1rem;
@@ -64,7 +66,7 @@
 						}
 					}
 
-					li + li {
+					li+li {
 						margin-top: 20px;
 					}
 				}
@@ -323,8 +325,7 @@
 				}
 			}
 
-			@media (max-width: 1024.98px) {
-			}
+			@media (max-width: 1024.98px) {}
 		}
 
 		@media (min-width: 1025px) {
@@ -430,6 +431,7 @@
 
 .dialog {
 	transition: all 0.3s ease;
+
 	@media (min-width: 1025px) {
 		opacity: 0;
 		transform: scale(0.7);
@@ -443,11 +445,9 @@
 		border-radius: 24px;
 		padding: 0 10px;
 		min-height: 48px;
-		background: linear-gradient(
-			306deg,
-			rgba(213, 184, 95, 1) 36%,
-			rgba(227, 227, 227, 1) 100%
-		);
+		background: linear-gradient(306deg,
+				rgba(213, 184, 95, 1) 36%,
+				rgba(227, 227, 227, 1) 100%);
 		filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#d5b85f", endColorstr="#e3e3e3", GradientType=1);
 
 		&:before {
